--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="theme-color" content="#000000" />
         <link rel="manifest" href="./manifest.json" />
         <link rel="shortcut icon" href="./favicon.ico" />
-        <title>freelancer_ui</title>
+        <title>Freelancer client</title>
         <style>
             .loader-container {
                 display: flex;
